hero section correction

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <nav class="navbar">
-        <div class="logo">MyBrand</div>
+        <div class="logo"><b>Responsive-Landing-Page</b></div>
         <ul class="nav-links">
           <li><a href="#hero">Home</a></li>
           <li><a href="#features">Features</a></li>
@@ -25,7 +25,7 @@
 
     <section id="hero" class="hero">
       <div class="hero-content">
-        <h1>Welcome to MyBrand</h1>
+        <h1>Welcome!</h1>
         <p>Build something amazing with us.</p>
         <a href="#features" class="btn">Explore Features</a>
       </div>
@@ -60,7 +60,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2025 MyBrand. All rights reserved.</p>
+      <p>&copy; 2025 RLP. All rights reserved.</p>
     </footer>
 
     <button id="scrollTopBtn" title="Go to top">↑</button>
