--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="logo"><b>Responsive-Landing-Page</b></div>
         <ul class="nav-links">
           <li><a href="#hero">Home</a></li>
-          <li><a href="#features">Features</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
